@startuml

title __TELEOP's Class Diagram__\n

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.teleop {
      abstract class BaseTeleOp {
          ~ buttonsList : HashSet<Button>
          ~ initialize()
          - addButtonsToList()
          {abstract} ~ mapButtonsToActions()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.teleop {
      class TeleOpBruteForce {
          ~ mapButtonsToActions()
          + runOpMode()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.teleop {
      class Utils {
          {static} + moveForward()
          {static} + moveBack()
          {static} + moveRight()
          {static} + moveLeft()
          {static} + latchAndUnlatch()
          {static} + moveMineralArm()
          {static} + extendMineralArm()
          {static} + contractMineralArm()
          {static} + tiltMineralBoxUnloading()
          {static} + tiltMineralBoxMoving()
          {static} + changeMineralBrushDirection()
          {static} + spinLeft()
          {static} + spinRight()
          {static} + turnMovementCorrectionOnOff()
      }
    }
  }
  

  BaseTeleOp -up-|> LinearOpMode
  BaseTeleOp o-- MoveWithGyro : movementHandler
  BaseTeleOp o-- ArmsAction : armsHandler
  TeleOpBruteForce -up-|> BaseTeleOp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
